module.exports = class CartException extends Error {
}