const CartException = require("./CartException.js");
module.exports = class EmptyCartException extends CartException {
}