const CartException = require("./CartException.js");
module.exports = class UpdateCartException extends CartException {
}