module.exports = class CartItemException extends Error {
}