const CartItemException = require("./CartItemException.js");
module.exports = class InvalidArticleIdException extends CartItemException {
}