const CartItemException = require("./CartItemException.js");
module.exports = class InvalidQuantityException extends CartItemException {
}
