@startuml

left to right direction
skinparam classAttributeIconSize 0

'Classes declaration
class CartItem {

    - articleId:int
    - name:string
    - quantity:int
    - price :float

    + <<constructor>> CartItem(articleId:int, name:string, quantity:int, price:Int)
    +<get>articleId() Int
    +<get>name() String
    +<get>quantity() Int
    +<set>quantity() Int
    +<get>price() Int
    +<set>price() Int
    +<get>total() float
}

class Cart {
    - items:CartItem[] = null
    + <<constructor>> Cart(items:CartItem[])
    +<get>items() items:CartItem[]
    + total() float
    + count(value : int) int
    + add(items:CartItem[]) Void
    + priceAverage() float
}

class Error{}

'CartItem
class CartItemException{}
class InvalidArticleIdException{}
class InvalidQuantityException{}
class InvalidPriceException{}

'Cart
class CartException{}
class EmptyCartException{}
class UpdateCartException{}

'CartItem
CartItem --> InvalidArticleIdException: throws
CartItem --> InvalidQuantityException : throws
CartItem --> InvalidPriceException : throws

Cart o-- CartItem
Cart --> EmptyCartException : throws
Cart --> UpdateCartException : throws
CartException -|> Error
EmptyCartException -|> CartException
UpdateCartException -|> CartException


Error <|- CartItemException
InvalidPriceException -|> CartItemException
InvalidQuantityException -|> CartItemException
CartItemException <|- InvalidArticleIdException

@enduml